// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Text area Default renders correctly 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;

exports[`EC - Text area Default renders correctly with a default value 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-id"
    name="example-name"
    rows="4"
  >
    Hello world!
  </textarea>
</div>
`;

exports[`EC - Text area Default renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;

exports[`EC - Text area Default renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m custom-class custom-class--test"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;

exports[`EC - Text area Default renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area custom-group-class custom-group-class--test"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;

exports[`EC - Text area Disabled renders correctly 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label ecl-form-label--disabled"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    disabled=""
    id="example-id"
    name=""
    rows="4"
  />
</div>
`;

exports[`EC - Text area Disabled renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label ecl-form-label--disabled"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    disabled=""
    id="example-id"
    name=""
    rows="4"
  />
</div>
`;

exports[`EC - Text area Disabled renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label ecl-form-label--disabled"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m custom-class custom-class--test"
    disabled=""
    id="example-id"
    name=""
    rows="4"
  />
</div>
`;

exports[`EC - Text area Disabled renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area custom-group-class custom-group-class--test"
>
  <label
    class="ecl-form-label ecl-form-label--disabled"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    Help message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    disabled=""
    id="example-id"
    name=""
    rows="4"
  />
</div>
`;

exports[`EC - Text area With error renders correctly 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <div
    class="ecl-feedback-message"
  >
    Error message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--invalid ecl-text-area--m"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;

exports[`EC - Text area With error renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <div
    class="ecl-feedback-message"
  >
    Error message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--invalid ecl-text-area--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;

exports[`EC - Text area With error renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <div
    class="ecl-feedback-message"
  >
    Error message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--invalid ecl-text-area--m custom-class custom-class--test"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;

exports[`EC - Text area With error renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-area custom-group-class custom-group-class--test"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-id"
  >
    Label
  </label>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
  <div
    class="ecl-feedback-message"
  >
    Error message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--invalid ecl-text-area--m"
    id="example-id"
    name="example-name"
    rows="4"
  />
</div>
`;
